--- a/templates/producto/delete.html
+++ b/templates/producto/delete.html
@@ -1,7 +1,33 @@
-<h1>Confirmar borrado</h1>
-<h5>
-    ¿está seguro de eliminar la estampa?
-</h5>
-<form method="POST">{% csrf_token %}
-    <button type="submit">Confirmar</button>
-</form>
+{% extends "producto/base_producto.html" %}
+
+{% load  static %}
+
+{% block panel-content %}
+
+<div class="grid-x grid-margin-x align-center">
+  <h5 class="cell" style="margin-bottom: 1em; text-align: center;">¿Desea eliminar la estampa?</h5>  
+  <form class="cell medium-9 grid-x grid-margin-x align-center" 
+    action="{% url 'estampa_app:eliminar_estampa' estampa.id %}" method="POST">
+    {% csrf_token %}
+    
+    <div class="cell medium-7">
+        <div class="card cell">
+            <div class="card-divider">
+              Quedan: {{ estampa.stock }}
+            </div>
+            <div class="card-section">
+              <h4>{{ estampa.nombre }}</h4>
+              <p>Artista: {{ estampa.artista.full_name }}</p>
+              <p>Descripcion: {{ estampa.descripcion }}</p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="cell medium-6">
+      <button type="submit" class="alert button">Eliminar</button>
+      <a href="{% url 'estampa_app:catalogo_estampas' %}" class="primary button clear">Volver</a>
+    </div>
+  </form>
+</div>
+
+{% endblock panel-content %}
