--- a/templates/producto/detail_estampa.html
+++ b/templates/producto/detail_estampa.html
@@ -1,13 +1,37 @@
-<h1>Detalle estampa {{ estampa.nombre }}</h1>
-{{estampa}}
+{% extends "producto/base_producto.html" %}
 
-<h3>Todos los datos</h3>
+{% load  static %}
 
-<p> Nombre: {{ estampa.nombre}}</p>
-<p>Descripción: {{ estampa.descripcion}}</p>
-<p> Valor: {{ estampa.valor}}</p>
-<p>Tema: {{ estampa.tema.get_state_display}}</p>
-<p>Artista: {{ estampa.artista.full_name}}</p>
-<p>Stock: {{ estampa.stock}}</p>
-<img src="{{ estampa.imagen.url}}">
+{% block panel-content %}
+
+<div class="grid-x grid-margin-x align-center">
+  <h5 class="cell" style="margin-bottom: 1em; text-align: center;">Detalle del producto</h5>  
+  <div class="cell medium-9 grid-x grid-margin-x align-center">
+    <div class="cell medium-6">
+        <div class="card cell">
+            <div class="card-section">
+              <h4>{{ estampa.nombre }}</h4>
+              <p><span style="font-weight: bold;">Nombre:</span> {{ estampa.nombre }}</p>
+              <p><span style="font-weight: bold;">Artista:</span> {{ estampa.artista.full_name }}</p>
+              <p><span style="font-weight: bold;">Valor:</span> {{ estampa.valor }}</p>
+              <p><span style="font-weight: bold;">Tema:</span> {{ estampa.get_tema_display }}</p>
+              <p><span style="font-weight: bold;">Popularidad:</span> {{ estampa.get_popularidad_display }}</p>
+              <p><span style="font-weight: bold;">Unidades disponibles</span> {{ estampa.stock }}</p>
+              <p><span style="font-weight: bold;">Descripción:</span> {{ estampa.descripcion }}</p>
+            </div>
+        </div>
+    </div>
+     <div class="cell medium-6">
+        <div class="card cell">
+            <div class="card-section">
+              <p><img src="{{estampa.imagen.url}}" width="1000" height="1000" ></p>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+
+{% endblock panel-content %}
+
+
 
