--- a/templates/producto/lista_catalogo.html
+++ b/templates/producto/lista_catalogo.html
@@ -67,6 +67,31 @@
       </tbody>
     </table>
   </div>
+  {% if  is_paginated %}
+            <nav aria-label="Pagination">
+                <ul class="pagination">
+                  {% if page_obj.has_previous  %}
+                    <li class="pagination-previous">
+                        <a href="?page={{page_obj.previous_page_number}}">Atrás</a> 
+                    </li>
+                  {% endif %}
+                  
+                  {% for pagina in paginator.page_range  %}
+                    <li><a href="?page={{pagina}}">{{ pagina }}</a></li>
+                  {% endfor %}
+                    
+                  
+                  {% if page_obj.has_next %}
+                    <li class="pagination-next">
+                        <a href="?page={{page_obj.next_page_number}}">Siguiente</a> 
+                    </li> 
+                  {% endif %}
+                      
+                   
+                </ul>
+            </nav>
+            {% endif %}
+                
 </div>
 
 {% endblock panel-content %}
